--- a/src/app/diagnose/diagnose.component.html
+++ b/src/app/diagnose/diagnose.component.html
@@ -61,4 +61,12 @@
   </form>
 </div>
 
+<div class="container">
+  <br /><br /><br />
+  <h1>Orignal image</h1>
+  <img [src]="imageFile.imageURL" height="200" *ngIf="imageFile.imageURL" />
+  <br /><br /><br />
+  <h1>Extracted image</h1>
+  <img [src]="extractedImageBase64" height="200" *ngIf="extractedImageBase64" />
+</div>
 <br /><br /><br />
