remove un nessesory code

--- a/src/app/diagnose/diagnose.component.html
+++ b/src/app/diagnose/diagnose.component.html
@@ -14,28 +14,8 @@
   width="500"
 />
 
-<!-- 
-<div class="container">
-  <span style="color: red" *ngIf="message">{{ message }}</span>
-  <input
-    #file
-    type="file"
-    accept="image/*"
-    (change)="preview(file.files)"
-    style="font-size: 20px"
-  />
-  <br />
-  <br />
-  <img [src]="imgURLs" height="200" *ngIf="imgURLs" />
-</div>
-
-<p>{{ imgURLs }}</p>
-<button mat-button routerLink="/report">Check this</button>
-<br />
-<input type="file" name="image" (change)="onFileSelect($event)" />
-<button type="button" (click)="onUpload()">Send to server</button> -->
 <br /><br /><br />
-
+a gya haha
 <div class="container">
   <form
     [formGroup]="ImageForm"
