add routing for home and about component and call api for login and register and after that a token is stored in local storage of site

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,8 +1,8 @@
 <mat-toolbar color="primary" class="navbar">
   <div>Solution Provider</div>
   <div>
-    <button mat-raised-button color="primary">Home</button>
-    <button mat-raised-button color="primary">About</button>
+    <button mat-raised-button color="primary" routerLink="home">Home</button>
+    <button mat-raised-button color="primary" routerLink="about">About</button>
     <button mat-raised-button color="primary">contact</button>
     <button
       mat-raised-button
