add history part

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -12,7 +12,15 @@
       routerLink="diagnose"
       *ngIf="showButton"
     >
-      diagnose
+      Diagnose
+    </button>
+    <button
+      mat-raised-button
+      color="primary"
+      routerLink="history"
+      *ngIf="showButton"
+    >
+      History
     </button>
 
     <button
