--- a/src/app/components/register-login-dialog/register-login-dialog.component.html
+++ b/src/app/components/register-login-dialog/register-login-dialog.component.html
@@ -4,8 +4,15 @@
       <div class="formSpace">
         <form (ngSubmit)="loginFormSubmit()">
           <mat-form-field color="accent" style="display: block">
-            <input matInput placeholder="Username" type="text" required name="username"
-              [(ngModel)]="loginUserData.username" #username="ngModel" />
+            <input
+              matInput
+              placeholder="Username"
+              type="text"
+              required
+              name="username"
+              [(ngModel)]="loginUserData.username"
+              #username="ngModel"
+            />
             <mat-error *ngIf="username.errors && username.errors.required">
               Username is required
             </mat-error>
@@ -14,8 +21,16 @@
           </mat-form-field>
 
           <mat-form-field color="accent" style="display: block">
-            <input matInput placeholder="Password" [type]="hide ? 'password' : 'text'" required minlength="2"
-              name="password" [(ngModel)]="loginUserData.password" #password="ngModel" />
+            <input
+              matInput
+              placeholder="Password"
+              [type]="hide ? 'password' : 'text'"
+              required
+              minlength="2"
+              name="password"
+              [(ngModel)]="loginUserData.password"
+              #password="ngModel"
+            />
             <mat-error *ngIf="password.errors && password.errors.required">
               Password is required
             </mat-error>
@@ -39,7 +54,12 @@
           <!-- <mat-checkbox>Remember Me!</mat-checkbox> -->
 
           <div align="end">
-            <button mat-raised-button color="accent" class="login-button" (click)="btnLoginClick()">
+            <button
+              mat-raised-button
+              color="accent"
+              class="login-button"
+              (click)="btnLoginClick()"
+            >
               Login
             </button>
           </div>
@@ -54,8 +74,15 @@
       <div class="formSpace">
         <form (ngSubmit)="registerFormSubmit()">
           <mat-form-field color="accent" style="display: block">
-            <input matInput placeholder="Username" type="text" required name="username"
-              [(ngModel)]="registerUserData.username" #username="ngModel" />
+            <input
+              matInput
+              placeholder="Username"
+              type="text"
+              required
+              name="username"
+              [(ngModel)]="registerUserData.username"
+              #username="ngModel"
+            />
             <mat-error *ngIf="username.errors && username.errors.required">
               Username is required
             </mat-error>
@@ -64,8 +91,16 @@
           </mat-form-field>
 
           <mat-form-field color="accent" style="display: block">
-            <input matInput placeholder="Password" type="password" required minlength="2" name="password"
-              [(ngModel)]="registerUserData.password" #password="ngModel" />
+            <input
+              matInput
+              placeholder="Password"
+              type="password"
+              required
+              minlength="2"
+              name="password"
+              [(ngModel)]="registerUserData.password"
+              #password="ngModel"
+            />
             <mat-error *ngIf="password.errors && password.errors.required">
               Password is required
             </mat-error>
@@ -76,8 +111,16 @@
           </mat-form-field>
 
           <mat-form-field color="accent" style="display: block">
-            <input matInput placeholder="cPassword" type="password" required minlength="2" name="cPassword"
-              [(ngModel)]="registerUserData.cPassword" #cPassword="ngModel" />
+            <input
+              matInput
+              placeholder="cPassword"
+              type="password"
+              required
+              minlength="2"
+              name="cPassword"
+              [(ngModel)]="registerUserData.cPassword"
+              #cPassword="ngModel"
+            />
             <mat-error *ngIf="cPassword.errors && cPassword.errors.required">
               Password is required
             </mat-error>
@@ -88,7 +131,12 @@
           </mat-form-field>
 
           <div align="end">
-            <button mat-raised-button color="accent" class="login-button" (click)="btnRegisterClick()">
+            <button
+              mat-raised-button
+              color="accent"
+              class="login-button"
+              (click)="btnRegisterClick()"
+            >
               Register
             </button>
           </div>
