--- a/src/app/components/register-login-dialog/register-login-dialog.component.html
+++ b/src/app/components/register-login-dialog/register-login-dialog.component.html
@@ -3,7 +3,7 @@
     <mat-tab label="Login">
       <div class="formSpace">
         <form (ngSubmit)="loginFormSubmit()">
-          <mat-form-field color="accent" style="display: block">
+          <mat-form-field style="display: block">
             <input
               matInput
               placeholder="Username"
@@ -20,7 +20,7 @@
             <mat-icon matSuffix>person</mat-icon>
           </mat-form-field>
 
-          <mat-form-field color="accent" style="display: block">
+          <mat-form-field style="display: block">
             <input
               matInput
               placeholder="Password"
@@ -56,7 +56,6 @@
           <div align="end">
             <button
               mat-raised-button
-              color="accent"
               class="login-button"
               (click)="btnLoginClick()"
             >
@@ -73,7 +72,7 @@
     <mat-tab label="Register">
       <div class="formSpace">
         <form (ngSubmit)="registerFormSubmit()">
-          <mat-form-field color="accent" style="display: block">
+          <mat-form-field style="display: block">
             <input
               matInput
               placeholder="Username"
@@ -90,7 +89,7 @@
             <mat-icon matSuffix>email</mat-icon>
           </mat-form-field>
 
-          <mat-form-field color="accent" style="display: block">
+          <mat-form-field style="display: block">
             <input
               matInput
               placeholder="Password"
@@ -110,7 +109,7 @@
             <mat-icon matSuffix>lock</mat-icon>
           </mat-form-field>
 
-          <mat-form-field color="accent" style="display: block">
+          <mat-form-field style="display: block">
             <input
               matInput
               placeholder="cPassword"
@@ -133,7 +132,6 @@
           <div align="end">
             <button
               mat-raised-button
-              color="accent"
               class="login-button"
               (click)="btnRegisterClick()"
             >
