--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,38 @@
-<app-nav-bar></app-nav-bar>
+<!-- 
+  
+  <app-nav-bar></app-nav-bar>
+
 <div class="container">
   <router-outlet></router-outlet>
+</div> 
+
+-->
+
+<!-- jerry above -->
+<!-- 
+<mat-sidenav-container>
+  <mat-sidenav #sidenav role="navigation">
+    <app-nav-bar></app-nav-bar>
+    <app-sidenav-list (sidenavClose)="sidenav.close()"></app-sidenav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <app-nav-bar></app-nav-bar>
+    <app-header (sidenavToggle)="sidenav.toggle()"></app-header>
+    <router-outlet></router-outlet>
+    <app-footer></app-footer>
+  </mat-sidenav-content>
+</mat-sidenav-container> -->
+<div class="main_div">
+  <mat-sidenav-container fullscreen>
+    <mat-sidenav #sidenav mode="side" role="navigation">
+      <app-side-nav-bar (sidenavClose)="sidenav.close()"></app-side-nav-bar>
+    </mat-sidenav>
+    <mat-sidenav-content>
+      <app-nav-bar (sidenavToggle)="sidenav.toggle()"></app-nav-bar>
+      <main>
+        <router-outlet></router-outlet>
+      </main>
+      <app-footer></app-footer>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
 </div>
