--- a/src/app/components/history/history.component.css
+++ b/src/app/components/history/history.component.css
@@ -1,4 +1,21 @@
-.container {
+/* .container {
   width: 95%;
   margin: 0 auto;
+} */
+
+.mat-form-field + .mat-form-field {
+  margin-left: 8px;
+}
+mat-expansion-panel {
+  background-color: rgb(41, 8, 41);
+}
+
+table {
+  width: 100%;
+}
+.mr-10 {
+  margin-right: 2px;
+}
+mat-card {
+  background-color: rgb(41, 8, 41);
 }
