--- a/src/app/components/diagnose/diagnose.component.html
+++ b/src/app/components/diagnose/diagnose.component.html
@@ -3,12 +3,7 @@
     <div class="form-group form-row">
       <label>select an image </label>
       <br />
-      <input
-        type="file"
-        id="image"
-        accept="image/*"
-        (change)="onImageSelect($event)"
-      />
+      <input type="file" id="image" accept="image/*" (change)="onImageSelect($event)" />
     </div>
 
     <div class="form-group form-row">
@@ -18,12 +13,12 @@
   </form>
   <br /><br /><br />
   <h1>Orignal image</h1>
-  <img [src]="imageFile.imageURL" height="200" *ngIf="imageFile.imageURL" />
+  <img [src]="imageFile.imageURL" height="200" *ngIf="imageFile" />
   <br /><br /><br />
   <h1>Extracted image</h1>
   <img [src]="extractedImageBase64" height="200" *ngIf="extractedImageBase64" />
   <br /><br /><br />
-  <h1>Enhance image</h1>
+  <h1>Enhanced image</h1>
   <img [src]="enhancedImageBase64" height="200" *ngIf="enhancedImageBase64" />
 </div>
 <br /><br /><br />
