--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,30 +1,11 @@
-<h1>home works!</h1>
-<h2>for all users</h2>
-
-<div class="slider">
-  <mat-carousel
-    timings="250ms ease-in"
-    [autoplay]="true"
-    interval="3000"
-    color="accent"
-    proportion="25"
-    slides="3"
-    [loop]="true"
-    [hideArrows]="false"
-    [hideIndicators]="false"
-    [useKeyboard]="true"
-    [useMouseWheel]="false"
-    orientation="ltr"
-  >
-    <mat-carousel-slide
-      #matCarouselSlide
-      *ngFor="let slide of slides; let i = index"
-      [image]="slide.image"
-      overlayColor="#00000040"
-      [hideOverlay]="false"
-    >
-      <div
-        style="
+<section>
+  <div class="slider">
+    <mat-carousel timings="250ms ease-in" [autoplay]="true" [interval]=3000 color="accent" [proportion]=25 [slides]=3
+      [loop]="true" [hideArrows]="false" [hideIndicators]="false" [useKeyboard]="true" [useMouseWheel]="false"
+      orientation="ltr">
+      <mat-carousel-slide #matCarouselSlide *ngFor="let slide of slides; let i = index" [image]="slide.image"
+        overlayColor="#00000040" [hideOverlay]="false">
+        <div style="
           width: 100%;
           height: 100%;
           display: flex;
@@ -32,15 +13,15 @@
           align-items: center;
           justify-content: center;
           color: white;
-        "
-        class="mat-display-2"
-      >
-        <h2>{{ slide.text }}</h2>
-        <p>We provide Best Results Of fMri Images For Brain Diseases.</p>
-      </div>
-    </mat-carousel-slide>
-  </mat-carousel>
-</div>
+        " class="mat-display-2">
+          <h2>{{ slide.text }}</h2>
+          <p>We provide Best Results Of fMri Images For Brain Diseases.</p>
+        </div>
+      </mat-carousel-slide>
+    </mat-carousel>
+  </div>
+
+</section>
 
 <div class="main-content">
   <div class="card-content" class="mat-subheading-2">
@@ -52,18 +33,9 @@
   </div>
 </div>
 
-<div
-  fxLayout.xs="column"
-  fxLayout="row wrap"
-  fxLayoutGap="10px"
-  ngClass.gt-xs="ml-10"
->
-  <mat-card
-    fxFlex.sm="0 1 calc(50%-10px)"
-    fxFlex.md="0 1 calc(33%-10px)"
-    fxFlex.gt-md="0 1 calc(25%-10px)"
-    *ngFor="let item of procedure"
-  >
+<div fxLayout.xs="column" fxLayout="row wrap" fxLayoutGap="10px" ngClass.gt-xs="ml-10">
+  <mat-card fxFlex.sm="0 1 calc(50%-10px)" fxFlex.md="0 1 calc(33%-10px)" fxFlex.gt-md="0 1 calc(25%-10px)"
+    *ngFor="let item of procedure">
     <mat-card-title>{{ item.title }}</mat-card-title>
     <img mat-card-image [src]="item.image" class="image" />
     <mat-card-content>{{ item.content }} </mat-card-content>
@@ -77,19 +49,9 @@
 <div class="mat-subheading-2" style="margin-top: 30px; text-align: center">
   <h2>Here are the sample work</h2>
 </div>
-<div
-  fxLayout.xs="column"
-  fxLayout="row wrap"
-  fxLayoutGap="10px"
-  ngClass.gt-xs="ml-10"
->
-  <div
-    class="portfolio-item-wrapper"
-    fxFlex.sm="0 1 calc(50%-10px)"
-    fxFlex.md="0 1 calc(33%-10px)"
-    fxFlex.gt-md="0 1 calc(25%-10px)"
-    *ngFor="let item of samples"
-  >
+<div fxLayout.xs="column" fxLayout="row wrap" fxLayoutGap="10px" ngClass.gt-xs="ml-10">
+  <div class="portfolio-item-wrapper" fxFlex.sm="0 1 calc(50%-10px)" fxFlex.md="0 1 calc(33%-10px)"
+    fxFlex.gt-md="0 1 calc(25%-10px)" *ngFor="let item of samples">
     <div class="portfolio-img-background">
       <img [src]="item.image" class="temp-image" />
     </div>
