--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -52,36 +52,18 @@
     <a routerLink="/home"><img src="./assets/images/pinbrain.jpg" /></a>
   </div>
 
-  <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
-    <!-- <ul fxLayout fxLayoutGap="15px" class="navigation-items">
-      <li>
-        <a routerLink="/home">HOME</a>
-      </li>
-      <li>
-        <a routerLink="/about">About</a>
-      </li>
-
-      <li>
-        <a routerLink="/contact">Contact</a>
-      </li>
-      <li>
-        <a routerLink="/diagnose">Diagnose</a>
-      </li>
-      <li>
-        <a routerLink="/history">History</a>
-      </li>
-    </ul> -->
+  <div fxFlex fxLayout fxLayoutAlign="start" fxHide.xs>
     <div class="nav-link-wrapper">
-      <a routerLink="about" *ngIf="!showButton">About</a>
+      <a routerLink="about">About</a>
     </div>
     <div class="nav-link-wrapper">
-      <a href="contact" *ngIf="!showButton">Contact Us</a>
+      <a href="contact">Contact Us</a>
     </div>
     <div class="nav-link-wrapper">
       <a href="">Diagnose Disease</a>
     </div>
     <div class="nav-link-wrapper">
-      <a routerLink="history" *ngIf="!showButton">History</a>
+      <a routerLink="history">History</a>
     </div>
   </div>
 
@@ -93,21 +75,12 @@
     </ul>
   </div> -->
   <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs class="navigation-items">
-    <button
-      mat-button
-      style="border-radius: 3px; color: whitesmoke"
-      id="btn"
-      (click)="openRegisterLoginDialog()"
-    >
+    <button mat-button style="border-radius: 3px; color: whitesmoke" id="btn" *ngIf="!showButton"
+      (click)="openRegisterLoginDialog()">
       Login
       <mat-icon> login</mat-icon>Register<mat-icon>how_to_reg</mat-icon>
     </button>
-    <button
-      mat-button
-      style="border-radius: 3px; color: whitesmoke"
-      (click)="logoutClick()"
-      *ngIf="showButton"
-    >
+    <button mat-button style="border-radius: 3px; color: whitesmoke" (click)="logoutClick()" *ngIf="showButton">
       Logout
     </button>
   </div>
