--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -5,26 +5,27 @@
   <form>
     <mat-form-field>
       <input matInput placeholder="Name" required />
-      <mat-icon matSuffix>person</mat-icon>
+      <!-- <mat-icon matSuffix>person</mat-icon> -->
     </mat-form-field>
     <mat-form-field>
       <input matInput placeholder="Enter your email" required />
-      <mat-icon matSuffix>drafts</mat-icon>
+      <!-- <mat-icon matSuffix>drafts</mat-icon> -->
     </mat-form-field>
     <mat-form-field>
       <input type="tel" matInput placeholder="Telephone" required />
-      <mat-icon matSuffix>call</mat-icon>
+      <!-- <mat-icon matSuffix>call</mat-icon> -->
     </mat-form-field>
     <mat-form-field>
       <input matInput placeholder="Subject" required />
-      <mat-icon matSuffix>create</mat-icon>
+      <!-- <mat-icon matSuffix>create</mat-icon> -->
     </mat-form-field>
     <mat-form-field>
       <textarea matInput placeholder="Textarea" required></textarea>
-      <mat-icon matSuffix>save</mat-icon>
+      <!-- <mat-icon matSuffix>save</mat-icon> -->
     </mat-form-field>
     <button mat-raised-button class="btn-custom">
-      Send Now<i class="material-icons"> send </i>
+      Send Now
+      <!-- <i class="material-icons"> send </i> -->
     </button>
   </form>
 </div>
