--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,9 +1,4 @@
-<footer
-  class="flex-container"
-  fxFlex="row"
-  fxflex
-  fxLayoutAlign="space-between none"
->
+<footer class="flex-container" fxFlex="row" fxflex fxLayoutAlign="space-around none">
   <div class="footer-content">
     <mat-icon>home</mat-icon>
     <h5>Uet Lahore</h5>
@@ -22,23 +17,14 @@
 
   <div class="footer-content">
     <div>
-      <span class="iconify" data-icon="mdi-instagram" data-inline="false"></span
-      >Join us on Instagram
+      <span class="iconify" data-icon="mdi-instagram" data-inline="false"></span>Join us on Instagram
     </div>
     <div>
-      <span
-        class="iconify"
-        data-icon="jam:facebook-square"
-        data-inline="false"
-      ></span>
+      <span class="iconify" data-icon="jam:facebook-square" data-inline="false"></span>
       Join us on Facebook
     </div>
     <div>
-      <span
-        class="iconify"
-        data-icon="jam:twitter-square"
-        data-inline="false"
-      ></span>
+      <span class="iconify" data-icon="jam:twitter-square" data-inline="false"></span>
       Join us on Twiiter
     </div>
   </div>
