--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,7 @@
 <section>
-  <div class="slider">
-    <mat-carousel timings="250ms ease-in" [autoplay]="true" [interval]=3000 color="accent" [proportion]=25 [slides]=3
-      [loop]="true" [hideArrows]="false" [hideIndicators]="false" [useKeyboard]="true" [useMouseWheel]="false"
-      orientation="ltr">
+  <div class="slider" fxHide.lt-md>
+    <mat-carousel timings="250ms ease-in" [autoplay]="true" [interval]=3000 color="accent" [proportion]=25 [loop]="true"
+      [hideArrows]="false" [hideIndicators]="false" [useKeyboard]="true" [useMouseWheel]="false" orientation="ltr">
       <mat-carousel-slide #matCarouselSlide *ngFor="let slide of slides; let i = index" [image]="slide.image"
         overlayColor="#00000040" [hideOverlay]="false">
         <div style="
@@ -20,7 +19,6 @@
       </mat-carousel-slide>
     </mat-carousel>
   </div>
-
 </section>
 
 <div class="main-content">
