--- a/src/app/components/nav-bar/nav-bar.component.css
+++ b/src/app/components/nav-bar/nav-bar.component.css
@@ -26,22 +26,23 @@ mat-toolbar {
   //     display: flex;
   // } */
 .nav-link-wrapper {
-  margin-left: 20px;
-  font-size: 0.9em;
-  text-transform: uppercase;
-  font-weight: bolder;
-}
-.nav-link-wrapper {
-  border-bottom: 1px solid transparent;
-  transition: border-bottom 0.5s;
+    /* margin-left: 20px; */
+    font-size: .9em;
+    text-transform: uppercase;
+    font-weight: bolder;
+    border-bottom: 1px solid transparent;
+    transition: border-bottom .5s;
+    /* height: 40px; */
+    /* text-align: center; */
+    /* justify-content: center; */
+    align-items: center;
+    display: flex;
+    margin: 20px;
 }
 .nav-link-wrapper a {
   color: whitesmoke;
   text-decoration: none;
   transition: color 0.5s;
-}
-.nav-link-wrapper a:hover {
-  /* color: plum; */
 }
 .nav-link-wrapper:hover {
   border-bottom: 1px solid plum;
