--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -48,37 +48,33 @@
       <mat-icon>menu</mat-icon>
     </button>
   </div>
-  <div>
-    <a routerLink="/home"><img src="./assets/images/pinbrain.jpg" /></a>
-  </div>
 
   <div fxFlex fxLayout fxLayoutAlign="start" fxHide.xs>
+    <div class="nav-link-wrapper">
+
+      <div>
+        <a routerLink="/home"><img src="./assets/images/pinbrain.jpg" /></a>
+      </div>
+    </div>
     <div class="nav-link-wrapper">
       <a routerLink="about">About</a>
     </div>
     <div class="nav-link-wrapper">
       <a href="contact">Contact Us</a>
     </div>
-    <div class="nav-link-wrapper">
-      <a href="">Diagnose Disease</a>
+    <div class="nav-link-wrapper" *ngIf="showButton">
+      <a href="diagnose">Diagnose Disease</a>
     </div>
-    <div class="nav-link-wrapper">
+    <div class="nav-link-wrapper" *ngIf="showButton">
       <a routerLink="history">History</a>
     </div>
   </div>
-
-  <!-- <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
-    <ul fxLayout fxLayoutGap="15px" class="navigation-items">
-      <li>
-        <button>Register/Login</button>
-      </li>
-    </ul>
-  </div> -->
   <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs class="navigation-items">
     <button mat-button style="border-radius: 3px; color: whitesmoke" id="btn" *ngIf="!showButton"
       (click)="openRegisterLoginDialog()">
       Login
-      <mat-icon> login</mat-icon>Register<mat-icon>how_to_reg</mat-icon>
+      <!-- <mat-icon> login</mat-icon> -->
+      Register<mat-icon>how_to_reg</mat-icon>
     </button>
     <button mat-button style="border-radius: 3px; color: whitesmoke" (click)="logoutClick()" *ngIf="showButton">
       Logout
