--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,37 +1,28 @@
 footer {
-  margin-top: 40px;
-  background-color: rgb(41, 8, 41);
-  border-top: 1px solid black;
+  padding: 40px;
   text-align: center;
-  color: white;
-  height: 300px;
-  /* border-radius: 6px 6px 10px; */
+  border-top: 1px solid black;
 }
 .footer-content {
   margin: 5px;
-  font-family: "Dancing Script", cursive;
 }
 
-.footer-content>div{
+.footer-content > div {
   display: flex;
   margin-top: 30px;
 }
 
 .mat-icon {
   font-size: 50px;
-  /* padding-top: 40px; */
 }
 h5 {
   font-size: 17px;
-  font-family: "Dancing Script", cursive;
 }
 .iconify {
   font-size: 30px;
   margin-right: 20px;
-  /* margin-right: 10%; */
-  /* padding-top: 40px; */
-  /* margin-top: 2px; */
 }
+
 .footer-span {
   font-size: 17px;
 }
