--- a/src/app/components/history/history.component.html
+++ b/src/app/components/history/history.component.html
@@ -1,10 +1,13 @@
-<!-- <div>
+<section class="progressBar" id="progressBar" *ngIf="showProgressBar">
+  <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+</section>
+
+<div>
   <p>history works!</p>
 
   <mat-grid-list class="container" cols="3" rowHeight="500">
-    <mat-grid-tile *ngFor="let item of data"> -->
-<!-- {{ item["image"] }} -->
-<!-- <mat-card>
+    <mat-grid-tile *ngFor="let item of data">
+      <mat-card>
         <mat-card-title>
           <p>Image Name: {{ item["imageName"] }}</p>
           <p>
@@ -17,19 +20,15 @@
       </mat-card>
     </mat-grid-tile>
   </mat-grid-list>
-</div> -->
+</div>
+
+<!-- 
 <div fxLayout="row" style="margin-top: 30px">
-  <mat-card
-    fxFlex.xs="100%"
-    fxFlex.lt-md="100%"
-    fxFlexOffset.lg="15%"
-    fxFlex.lg="65%"
-  >
+  <mat-card fxFlex.xs="100%" fxFlex.lt-md="100%" fxFlexOffset.lg="15%" fxFlex.lg="65%">
     <mat-card-header>
       <div mat-card-avatar></div>
       <mat-card-title>History </mat-card-title>
-      <mat-card-subtitle
-        >This will show the history of the patient<br />
+      <mat-card-subtitle>This will show the history of the patient<br />
         <mat-list>
           <div class="mat-title">Username</div>
           <mat-list-item>{{ username }}</mat-list-item>
@@ -39,16 +38,12 @@
     </mat-card-header>
     <mat-card-content>
       <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-        <!--- Note that these columns can be defined in any order.
-              The actual rendered columns are set as a property on the row definition" -->
 
-        <!-- ImageName Column -->
         <ng-container matColumnDef="imagename">
           <th mat-header-cell *matHeaderCellDef>Image Name</th>
           <td mat-cell *matCellDef="let element">{{ element.imagename }}</td>
         </ng-container>
 
-        <!--CheckIn Column -->
         <ng-container matColumnDef="time">
           <th mat-header-cell *matHeaderCellDef>CheckIn Time</th>
           <td mat-cell *matCellDef="let element">{{ element.time }}</td>
@@ -58,12 +53,7 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
       <h4 style="text-align: center">Images User give as an input</h4>
-      <div
-        style="padding-top: 10px"
-        fxLayout.lg="row"
-        fxLayout.xs="column"
-        fxLayoutGap="10px"
-      >
+      <div style="padding-top: 10px" fxLayout.lg="row" fxLayout.xs="column" fxLayoutGap="10px">
         <div>
           <img src="./assets/images/nn.jpg" />
         </div>
@@ -77,7 +67,9 @@
       </div>
     </mat-card-content>
   </mat-card>
-</div>
+</div> -->
+
+
 <!-- 
 <div fxLayout="row" style="margin-top: 30px">
   <mat-accordion
