--- a/src/app/components/nav-bar/nav-bar.component.css
+++ b/src/app/components/nav-bar/nav-bar.component.css
@@ -1,40 +1,14 @@
-/* .navbar {
-  justify-content: space-between;
-}
-button {
-  padding-left: 2rem;
-  padding-right: 2rem;
-  margin-right: 1rem;
-} */
 
-/* 
-// button{
-  //     margin: 3em;
-  // }
-  */
 mat-toolbar {
-  font-family: "Dancing Script", cursive;
+  font-family: 'Roboto', sans-serif;
 }
 
-/*
-  // nav-wrapper{
-  //     display: flex;
-  //     justify-content: space-between;
-  //     padding: 38px;
-  // }
-  // .left-side{
-  //     display: flex;
-  // } */
 .nav-link-wrapper {
-    /* margin-left: 20px; */
     font-size: .9em;
     text-transform: uppercase;
     font-weight: bolder;
     border-bottom: 1px solid transparent;
     transition: border-bottom .5s;
-    /* height: 40px; */
-    /* text-align: center; */
-    /* justify-content: center; */
     align-items: center;
     display: flex;
     margin: 20px;
@@ -47,20 +21,11 @@ mat-toolbar {
 .nav-link-wrapper:hover {
   border-bottom: 1px solid plum;
 }
-/* //   .example-spacer {  
-  //           // This fills the remaining space, by using flexbox. 
-  //     // Every toolbar row uses a flexbox row layout.
-  //     flex: 1 1 auto;
-  //   } */
 button {
-  font-family: "Dancing Script", cursive;
+  font-family: 'Roboto', sans-serif;
   font-weight: bolder;
   font-size: large;
 }
-
-/* // mat-sidenav-container, mat-sidenav-content, mat-sidenav {
-  //     height: 100%;
-  // } */
 
 mat-sidenav {
   width: 250px;
@@ -69,14 +34,6 @@ mat-sidenav {
 main {
   padding: 10px;
 }
-/* // a {
-  //     text-decoration: none;
-  //     color: white;
-  // }
-  
-  // a:hover, a:active{
-  //     color: lightgray;
-  // } */
 
 .navigation-items {
   list-style-type: none;
@@ -84,10 +41,6 @@ main {
   margin: 0;
 }
 
-mat-toolbar {
-  border-radius: 3px;
-  background-color: rgb(41, 8, 41);
-}
 
 @media (max-width: 959px) {
   mat-toolbar {
