--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -57,6 +57,9 @@
       </div>
     </div>
     <div class="nav-link-wrapper">
+      <a routerLink="home">Home</a>
+    </div>
+    <div class="nav-link-wrapper">
       <a routerLink="about">About</a>
     </div>
     <div class="nav-link-wrapper">
