--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,58 +1,69 @@
 <section fxHide.lt-md>
-  <mat-carousel timings="250ms ease-in" [autoplay]="true" [interval]=3000 color="accent" [proportion]=25 [loop]="true"
-    [hideArrows]="false" [hideIndicators]="false" [useKeyboard]="true" [useMouseWheel]="false" orientation="ltr">
-    <mat-carousel-slide #matCarouselSlide *ngFor="let slide of slides;" [image]="slide.image" overlayColor="#00000040"
-      [hideOverlay]="false">
-      <div style="display: flex;
+    <mat-carousel timings="250ms ease-in" [autoplay]="true" [interval]=3000 color="accent" [proportion]=25 [loop]="true" [hideArrows]="false" [hideIndicators]="false" [useKeyboard]="true" [useMouseWheel]="false" orientation="ltr">
+        <mat-carousel-slide #matCarouselSlide *ngFor="let slide of slides;" [image]="slide.image" overlayColor="#00000040" [hideOverlay]="false">
+            <div style="display: flex;
           flex-direction: column;
           align-items: center;
           justify-content: center;
           color: white;" class="mat-display-2">
-        <h2>{{ slide.text }}</h2>
-        <p>We provide Best Results Of fMri Images For Brain Diseases.</p>
-      </div>
-    </mat-carousel-slide>
-  </mat-carousel>
+                <h2>{{ slide.text }}</h2>
+                <p>We provide Best Results Of fMri Images For Brain Diseases.</p>
+            </div>
+        </mat-carousel-slide>
+    </mat-carousel>
 </section>
 
 <section>
-  <div class="main-content">
-    <div class="card-content" class="mat-subheading-2">
-      Information About Our Work
-      <div class="mat-body-1">
-        "We are passionate to provide the services<br /><br />
-        related to diagonosing the brain diseases using fMRI Images"
-      </div>
-    </div>
+    <div class="main-content">
+        <section>
+            <!-- intro to alzhaimer -->
+            <div class="introSection">
+                <div class="introContent">
 
-    <div ng fxLayout.xs="column" fxLayout="row wrap" fxLayoutGap="10px" ngClass.gt-xs="ml-10">
-      <mat-card fxFlex.sm="0 1 calc(50%-10px)" fxFlex.md="0 1 calc(33%-10px)" fxFlex.gt-md="0 1 calc(25%-10px)"
-        *ngFor="let item of procedure">
-        <mat-card-title>{{ item.title }}</mat-card-title>
-        <img mat-card-image [src]="item.image" class="image" />
-        <mat-card-content>{{ item.content }} </mat-card-content>
-        <mat-card-actions>
-          <button mat-button>LIKE</button>
-          <button mat-button>SHARE</button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
+                    <blockquote class="ludwig">
+                        Alzheimer’s disease (AD) is an incurable, degenerative and irreversible disorder which results from cognitive decline. and caused by abnormal build-up of protein in and around brain cells. One of the protein involved deposits which form plaques around
+                        brain cells and tangles within brain cells.</blockquote>
 
-    <div class="mat-subheading-2" style="margin-top: 30px; text-align: center">
-      <h2>Here are the sample work</h2>
+                </div>
+                <div class="introImage">
+                    <img src="./assets/images/brainko.jpg" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <!-- stages -->
+
+        </section>
+        <section>
+            <!-- team -->
+            <div class="teamSection">
+                <section id="team">
+                    <h1 class="heading"> <i class="fas fa-rocket"></i> Team Members </h1>
+                    <div class="teamContainer">
+                        <div class="box" *ngFor="let item of userData">
+                            <div class="top-bar"></div>
+                            <div class="details">
+                                <img [src]="item.image" alt="">
+                                <strong>{{item.name}}</strong>
+                                <p>{{item.email}}</p>
+                            </div>
+                            <div class="btn">
+                                <a [href]="item.links.facebook"> <span><i class="fab fa-facebook"></i></span> </a>
+                                <a [href]="item.links.instagram"> <span><i class="fab fa-instagram"></i></span> </a>
+                                <a [href]="item.links.linkedin"> <span><i class="fab fa-linkedin-in"></i></span> </a>
+                                <a [href]="item.links.twitter"> <span><i class="fab fa-twitter"></i></span> </a>
+                            </div>
+                        </div>
+
+                    </div>
+                </section>
+            </div>
+        </section>
+
+
+
+        <section>
+            <!-- check now -->
+        </section>
     </div>
-    <div fxLayout.xs="column" fxLayout="row wrap" fxLayoutGap="10px" ngClass.gt-xs="ml-10">
-      <div class="portfolio-item-wrapper" fxFlex.sm="0 1 calc(50%-10px)" fxFlex.md="0 1 calc(33%-10px)"
-        fxFlex.gt-md="0 1 calc(25%-10px)" *ngFor="let item of samples">
-        <div class="portfolio-img-background">
-          <img [src]="item.image" class="temp-image" />
-        </div>
-        <div class="img-text-wrapper">
-          <div class="subtitle">
-            {{ item.subtitle }}
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 </section>
